# computer_graphics

./: README.md
week1/: Makefile  week1
week1/include/: Matrix3X3.h  Vector2D.h  Vector3D.h
week1/include/glad/: glad.h
week1/src/: glad.c  main.cpp  test.cpp
week1/src/main.dSYM/Contents/Resources/DWARF/: main
week2/: CMakeLists.txt  memo  setting  week2
week2/src/: circle.cpp  smileFace.cpp
week3/: CMakeLists.txt  week3
week3/memo/: memo
week3/src/: modern_style.cpp  old_style.cpp  std_vector_case.cpp  vbo_1_triangle.cpp  vbo_2_triangle_4_vertices.cpp  vbo_2_triangle_6_vertices.cpp
week4/: CMakeLists.txt  week4
week4/include/: Matrix4.h  Vector4.h
week4/src/: main.cpp
